--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		#texto {
 		  font-family: Century Gothic, sans-serif;
-		  font-size: 18px;
+		  /*font-size: 18px;*/
 		  padding: 0px;
 		  border: 5px solid;
 		  border-color: transparent;
