--- a/index.html
+++ b/index.html
@@ -43,20 +43,27 @@
 		}
 
 		.fondo{
-			filter: blur(10px);
-			position: fixed;
+		    filter: blur(10px);
+		    position: fixed;
 		    top: 50%;
 		    left: 50%;
 		    transform: translate(-50%, -50%);
 		    border-radius: 20px;
-		    max-width: 50%;
-		    min-height: 99%;
+		    
 		    width: 100%;
 		    height: 100%;
 		    background-color: rgba(0, 0, 0, 0.5); /* Translúcido */
 		    z-index: 1; /* Asegura que esté por debajo del texto */
 		    
 		}
+
+		@media screen and (max-width: 850px){
+			.fondo {
+				max-width: 100%;
+		    		min-height: 99%;
+			}
+		}
+		
 	</style>
 	<div class="fondo"></div>
 		<div class="carta">
