--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Escritura Automática</title>
+	<title></title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<style type="text/css">
 		#texto {
-		  font-family: Century Gothic, sans-serif;
-		  /*font-size: 18px;*/
+		  font-family: Century Gothic;
+		  font-size: 16px;
 		  padding: 0px;
 		  border: 5px solid;
 		  border-color: transparent;
