--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		}
 		escribirTexto();*/
 		
-		
+		let index = 0;
 		function escribirTexto() {
 		  const divTexto = document.getElementById('texto');
 		  const fondoNegro = document.querySelector('.fondo');
